// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Heading Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <h3
      class="sc-iktFzd ePMNkU sc-jJEJSO kYibbK"
    >
      Heading h3
    </h3>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 1 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <h1
      class="sc-iktFzd ePMNkU sc-hiSbYr hwRkKu"
    >
      Heading h1
    </h1>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 2 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <h2
      class="sc-iktFzd ePMNkU sc-gWHgXt goapnY"
    >
      Heading h2
    </h2>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 3 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <h3
      class="sc-iktFzd ePMNkU sc-cBNfnY hcRIY"
    >
      Heading h3
    </h3>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 4 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <h4
      class="sc-iktFzd bZzDXR sc-citwmv hsEgEr"
    >
      Heading h4
    </h4>
  </div>
</div>
`;

exports[`Storyshots Core/Heading H 5 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <h5
      class="sc-iktFzd bZzDXR sc-jcVebW huUMIs"
    >
      Heading h5
    </h5>
  </div>
</div>
`;
